--- a/Project/package.json
+++ b/Project/package.json
@@ -20,6 +20,7 @@
     "sass-lint": "^1.12.1"
   },
   "dependencies": {
-    "owl.carousel": "^2.3.2"
+    "owl.carousel": "^2.3.2",
+    "sass-mediaqueries": "^1.6.1"
   }
 }
